Minor fixes: - crossword: hide submit button after submitting and no attempts remaining & allow highlight / correct colours to be set in themes - image sequence: change bold text to h3 - modify exercise & text correction: fix text box width - opinion: disable printing optional property didn't work - fixed - table: fix table sizing on mobiles - text correction & answer x of y: fix wording of attempts remaining string fall back text

--- a/modules/xerte/parent_templates/Nottingham/models_html5/modify.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/modify.css
@@ -6,7 +6,8 @@
 	
 	#pageContents textarea {
 		display: block;
-		width: 95%;
+		width: 100%;
+		box-sizing: border-box;
 		resize: vertical;
 		margin: 0.5em auto;
 	}
